[package]
name = "sysim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
debugless-unwrap = "0.0.4"
futures = "0.3.21"
once_cell = "1.10.0"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
